# web_homework9

./: pyproject.toml
web9_spyder/: scrapy.cfg
web9_spyder/web9_spyder/: items.py  middlewares.py  pipelines.py  settings.py
web9_spyder/web9_spyder/spiders/: main.py
web_homework9/: docker-compose.yml  fill_db.py  models.py  search.py
web_homework9/data/: authors.json
